# home-warehouse-system

./: .env.example  .gitconfig  .gitignore  .mise.toml  .mise.toml.example  ACCESSIBILITY_IMPLEMENTATION.md  ACCESSIBILITY_PLAN.md  CLAUDE.md  DATABASE.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PLAN-mcp-ssh.md  PROGRESS.md  README.md  docker-compose.yml  setup-memory-limit.sh  sonar-project.properties
backend/: .air.toml  .dockerignore  .env.example  .gitignore  .golangci.yml  CLAUDE.md  Dockerfile  Dockerfile.scheduler  Dockerfile.server  Dockerfile.worker  README.md  README.tests.md  conftest.py  coverage_current.out  coverage_new.out  coverage_phase2.out  domain_coverage.out  go.mod  go.sum  pyproject.toml  sqlc.yaml
backend/cmd/mcp/: main.go
backend/cmd/photo-admin/: main.go
backend/cmd/scheduler/: main.go
backend/cmd/seed/: main.go
backend/cmd/server/: main.go
backend/cmd/worker/: main.go
backend/db/: schema.sql
backend/db/migrations/: 001_initial_schema.sql  002_add_needs_review.sql  002_expiry_alert_notification_types.sql  002_notifications.sql  002_push_subscriptions.sql  002_tenant_scoping_columns.sql  (+34 more)
backend/e2e/: conftest.py  test_analytics_flow.py  test_auth_flow.py  test_borrowers_flow.py  test_categories_flow.py  test_containers_flow.py  test_dashboard_flow.py  test_docspell_flow.py  test_exports_flow.py  test_favorites_flow.py  test_imports_flow.py  test_inventory_flow.py  test_items_flow.py  test_loan_flow.py  test_locations_flow.py  test_notifications_flow.py  test_oauth_flow.py  test_password_reset_flow.py
backend/scripts/: seed.py
(+3830 files in other folders)
